@@ -1,6 +1,7 @@
 Version 5.5.0 (TBD)
     Added ability to load TinyMCE in inline mode within a ShadowRoot #TINY-6128
-    Removed the `Env.experimentalShadowDom` flag.  The original target for an open shadow root can be obtained using `event.getComposedPath()`. #TINY-6128
+    Changed the `target` property on fired events to use the native event target. The original target for an open shadow root can be obtained using `event.getComposedPath()` #TINY-6128
+    Deprecated the `Env.experimentalShadowDom` flag #TINY-6128
     Fixed the `event.getComposedPath()` function on events fired from TinyMCE. This was throwing an exception, but now works as expected. #TINY-6128
     Fixed the `media` plugin not saving the alternative source url in some situations #TINY-4113
 
